# internal/types/types.go
@@ -188,3 +188,10 @@ type UserInfoService interface {
 	// and unpacks it into the UserInfo type.
 	FetchUserInfoFromIssuer(ctx context.Context, iss, rawToken string) (*UserInfo, error)
 }
+
+// OAuthClientManager defines the storage interface for OAuth clients.
+type OAuthClientManager interface {
+	CreateOAuthClient(ctx context.Context, client OAuthClient) (OAuthClient, error)
+	LookupOAuthClientByID(ctx context.Context, clientID string) (OAuthClient, error)
+	DeleteOAuthClient(ctx context.Context, clientID string) error
+}
